<resources>

    <color name="welcomeTextColor">#6633CC</color>
    <color name="number_bar">#ff9999</color>
    <color name="word_bar">#ff9966</color>

    <string name="startBudgetCreatorButtonText">Create A New Budget</string>
    <string name="startBudgetLoaderButtonText">Load An Old Budget</string>
    <string name="app_name">Budget Helper</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_budget_helper">BudgetHelper</string>
    <string name="tab_overview">Overview</string>
    <string name="tab_income">Income</string>
    <string name="tab_expense">Expense</string>
    <string name="tab_analysis">Analysis</string>
    <string name="tab_edit">Edit</string>
    <string name="welcome">Welcome! </string>
    <string name="title_activity_budget_creator">BudgetCreator</string>
    <string name="title_activity_budget_tab_host">BudgetHelper</string>
    <string name="menuItemSaveText">Save</string>
    <string name="title_activity_overview_fragment">OverviewFragment</string>
    <string name="title_activity_income_fragment">IncomeFragment</string>
    <string name="title_activity_expense_fragment">ExpenseFragment</string>
    <string name="title_activity_analysis_fragment">AnalysisFragment</string>
    <string name="title_activity_edit_fragment">EditFragment</string>
    <string name="askForBudgetName">Enter the name of your budget.</string>
    <string name="continueButton">Continue</string>
    <string name="insertBudgetNameHint">Insert Name</string>
    <string name="budgetCreatorDialogText">Start building your budget.</string>
    <string-array name="typeStringArray">
        <item >Not set</item>
        <item >Daily</item>
        <item >Weekly</item>
        <item >Monthly</item>
    </string-array>
    <string name="askForBudgetDuration">Set the budget duration. </string>
    <string name="askForBudgetStartDate">Set start date.</string>
    <string name="askForBudgetEndDate">Set end date.</string>
    <string name="budgetNameDisplay">Budget name:</string>
    <string name="budgetDurationDisplay">Budget duration:</string>
    <string name="budgetStartDateDisplay">Start date: </string>
    <string name="budgetEndDateDisplay">End date:</string>
    <string name="addIncomeButtonText">Add Income</string>
    <string name="deleteIncomeButtonText">Delete Income</string>
    <string name="askForIncomeName">Enter income name</string>
    <string name="askForIncomeRecurrence">Set income recurrence </string>
    <string name="askForIncomeValue">Set income value</string>
    <string name="dollarSign">$</string>
    <string name="addIncomeDialogText">Add new income</string>
    <color name="incomeItemBarColor">#4466CC</color>
    <color name="incomeItemBarColorWhite">#FFFFFF</color>
    <string name="deleteExpenseButtonText">Delete expense</string>
    <string name="addExpenseButtonText">Add expense</string>
    <string name="addExpenseDialogText">Add a new expense</string>
    <string name="askForExpenseName">Enter expense name</string>
    <string name="askForExpenseRecurrence">Set expense recurrence</string>
    <string name="askForExpenseValue">Set expense value</string>
    <string name="addIncomeCancelText">Cancel</string>
    <string name="okButtonText">OK</string>
    <string name="askForOkToDeleteIncome">Are you sure you want to delete this income?</string>
    <string name="deleteIncomeDialogText">Delete an income</string>
    <string name="askForOkToDeleteExpense">Are you sure you want to delete this expense?</string>
    <string name="deleteExpenseDialogText">Delete an expense</string>
    <string name="budgetIncomeTotalDisplay">Income total: </string>
    <string name="budgetExpenseTotalDisplay">Expense total: </string>
    <string name="numberOfDurationHint"># of </string>
    <string name="backButtonText">Back</string>
    <string-array name="recurrenceStringArray">
        <item >Not Set</item><item >One Time</item>
        <item >Weekly</item>
        <item >bi-Weekly</item>
        <item >Monthly</item>
        
    </string-array>
    <string name="askForRecurrenceDate">Set the recurrence start date.</string>
    <string name="askForBudgetType">Budget Type:</string>
    <string name="askForBudgetSpan">Budget span: </string>
    <string name="calendarBreakdownDisplayText">Calendar Breakdown</string>
    <color name="calendarBackground">#ff4477</color>
    <color name="calendarItemBackground">#223322</color>
    <color name="calendarItemTextColor">#99ff99</color>
    <color name="calendarBarColor">#330099</color>

</resources>