<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="275dp"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="5dp"
    android:layout_gravity="left">
    
    <!-- Expense Name -->
    <TextView 
        android:id="@+id/expenseNameDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/askForExpenseName" />
	<EditText 
	    android:id="@+id/expenseName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/insertBudgetNameHint"
        android:text="new expense"/>
	<!-- Expense value -->
    <TextView 
        android:id="@+id/expenseValueDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/askForExpenseValue" />
	<EditText 
	    android:id="@+id/expenseValue"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/dollarSign"
        android:inputType="numberDecimal" 
        android:text="1500"/>
	<!-- Expense Recurrent -->
    <TextView 
        android:id="@+id/expenseRecurrenceDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/askForExpenseRecurrence" />
    <Spinner 
        android:id="@+id/expenseRecurrence"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:entries="@array/recurrenceStringArray" />
    <LinearLayout 
        android:id="@+id/buttonBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
	    <Button
	        android:id="@+id/addExpenseButton"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:text="@string/continueButton"
	        android:layout_marginTop="10dp" />
	    <Button
	        android:id="@+id/addExpenseCancleButton"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:text="@string/addIncomeCancelText"
	        android:layout_marginTop="10dp" />
    </LinearLayout>
</LinearLayout>