<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="275dp"
    android:layout_height="250dp"
    android:orientation="vertical"
    android:layout_gravity="center" 
    android:paddingLeft="5dp"
    android:paddingTop="10dp">
    <TextView 
        android:id="@+id/askForBudgetName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/askForBudgetName"
        android:textColor="@color/welcomeTextColor" />
    <EditText
        android:id="@+id/budgetName"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:background="@drawable/back_with_borders"
        android:hint="@string/insertBudgetNameHint"
        android:text="aNewBudgetName"
        android:paddingLeft="5dp"
        android:textSize="15dp"
        android:layout_gravity="left" >
        <requestFocus />
    </EditText>
    <TextView 
        android:id="@+id/askForBudgetDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/askForBudgetDuration"
        android:textColor="@color/welcomeTextColor" />
	<LinearLayout 
	   android:id="@+id/budgetTypeBar"
	   android:layout_width="wrap_content"
	   android:layout_height="wrap_content"
	   android:orientation="horizontal"> 
	   <TextView
		   android:id="@+id/askForTypeText"
		   android:layout_width="wrap_content"
		   android:layout_height="wrap_content"
		   android:text="@string/askForBudgetType"
		   android:paddingRight="5dp" />
	   <Spinner 
	       android:id="@+id/budgetType"
	       android:layout_width="wrap_content"
	       android:layout_height="40dp"
	       android:entries="@array/typeStringArray" />
	</LinearLayout>
	<LinearLayout 
	   android:id="@+id/budgetSpanBar"
	   android:layout_width="wrap_content"
	   android:layout_height="wrap_content"
	   android:orientation="horizontal"> 
	   <TextView
		   android:id="@+id/askForBudgetSpan"
		   android:layout_width="wrap_content"
		   android:layout_height="wrap_content"
		   android:text="@string/askForBudgetSpan"
		   android:paddingRight="5dp" />
	   <EditText 
	       android:id="@+id/budgetSpan"
	       android:layout_width="45dp"
	       android:layout_height="40dp"
	       android:inputType="number"
	       android:hint="#" />
	</LinearLayout>
    <Button
        android:id="@+id/continueBudgetCreatorButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:onClick="continueBudgetCreatorClickHandler"
        android:text="@string/continueButton"
        android:layout_marginTop="10dp" />
</LinearLayout>