<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	<TextView
	    android:id="@+id/welcomeMessage"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:textSize="30dp"
	    android:textColor="@color/welcomeTextColor"
	    android:text="@string/welcome"
	    android:textStyle="bold"
	    android:layout_marginTop="15dp"
	    android:layout_marginLeft="15dp"/>
	<Button 
	    android:id="@+id/startBudgetCreatorButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/welcomeMessage"
	    android:text="@string/startBudgetCreatorButtonText"
	    android:textSize="20dp"
	    android:layout_marginTop="15dp"
	    android:layout_marginLeft="15dp"
	    android:onClick="createBudgetClickHandler"/>	
	<Button
	    android:id="@+id/startBudgetLoaderButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignRight="@+id/startBudgetCreatorButton"
	    android:layout_below="@+id/startBudgetCreatorButton"
	    android:text="@string/startBudgetLoaderButtonText"
	    android:textSize="20dp" 
	    android:layout_marginTop="10dp"
	    android:layout_marginLeft="15dp"/>

</RelativeLayout>
